# rmcp-oauth

./: Cargo.toml  LICENSE  README.md
examples/: simple_server.rs  with_rmcp.rs
src/: config.rs  cors.rs  error.rs  lib.rs  pkce.rs  provider.rs  router.rs  types.rs
src/handlers/: authorize.rs  callback.rs  metadata.rs  mod.rs  protected_resource.rs  register.rs  revoke.rs  token.rs
src/middleware/: bearer_auth.rs  client_auth.rs  mod.rs  require_auth.rs
tests/: authorize_test.rs  metadata_test.rs  middleware_test.rs  register_test.rs  revoke_test.rs  router_test.rs  token_test.rs  types_test.rs
tests/helpers/: mod.rs
